k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dormsystem
  labels:
    name: dormsystem
    app: dorm-system
